Some alignments is fixed

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
 }
 
 .logo-img {
-  height: 42px;       /* adjust if needed */
+  height: 95px;       /* adjust if needed */
   width: auto;
   object-fit: contain;
 }
@@ -184,8 +184,8 @@ body {
   color: transparent;
 }
 .hero-text p {
-  margin: 0 0 1.8rem;
-  max-width: 34rem;
+  margin: 1rem auto 0;
+  text-align: center;
   color: #fde6c8;
 }
 
